# neural-network-arena

./: .rustfmt.toml  Cargo.toml  MVP_REQUIREMENTS.md  PHASES.md  README.md  REQUIREMENTS.md  clippy.toml
benches/: vm_performance.rs
examples/: performance_test.rs
src/: environment.rs  lib.rs  simulation.rs  wasm_api.rs
src/evolution/: mod.rs  population.rs  selection.rs  speciation.rs
src/memory/: allocator.rs  mod.rs  territory.rs
src/neural/: genome.rs  mod.rs  network.rs  warrior.rs
src/vm/: instruction.rs  mod.rs  virtual_machine.rs
tests/: genome_tests.rs  integration_tests.rs  sensor_tests.rs  vm_tests.rs
www/: package-lock.json  package.json  tsconfig.json  webpack.config.js
www/public/: index.html
www/src/: index.ts
www/src/components/: Application.ts  ControlPanel.ts  HeatmapRenderer.ts  MainRenderer.ts  NetworkRenderer.ts
www/src/types/: simulation.ts
www/src/utils/: PerformanceMonitor.ts
