[package]
name = "neural-network-arena"
version = "0.1.0"
edition = "2021"
authors = ["Mathius Johnson <mathiusjohnson@example.com>"]
description = "Competitive neural network evolution platform with custom virtual machine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mathiusjohnson/neural-network-arena"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "Element",
  "HtmlElement",
  "Performance",
] }
js-sys = "0.3"
thiserror = "1.0"
serde-wasm-bindgen = "0.6"
wee_alloc = { version = "0.4", optional = true }
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vm_performance"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wee_alloc = ["dep:wee_alloc"]

[profile.release]
lto = true
opt-level = "s"
